# acoustipy

./: 404.html  CITATION.cff  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  reqs.txt  requirements.txt  setup.py
.github/workflows/: build_docs.yml  python-publish.yml  testing.yml
AcoustiBase/: index.html
AcousticID/: index.html
AcousticTMM/: index.html
Examples/Hybrid/: index.html
Examples/Indirect/: index.html
Examples/Inverse/: index.html
Examples/impedance_tube/: index.html
Examples/layer_to_database/: index.html
Examples/layers_from_database/: index.html
Examples/multilayer_structure/: index.html
Examples/structure_to_database/: index.html
Theory/Absorption_Theory/: index.html
Theory/Biot_Limp_Model/: index.html
Theory/Biot_Rigid_Model/: index.html
Theory/DBM_Model/: index.html
Theory/DB_Model/: index.html
Theory/EF_MPP_Model/: index.html
Theory/Horoshenkov_Model/: index.html
Theory/JCAL_Model/: index.html
Theory/JCAPL_Model/: index.html
Theory/JCA_Model/: index.html
Theory/MAA_MPP_Model/: index.html
Theory/Reflection_Theory/: index.html
Theory/Resistive_Screen_Model/: index.html
Theory/TMM_Theory/: index.html
Theory/TMM_Theory_General/: index.html
Theory/Transmission_Theory/: index.html
docs/: AcoustiBase.md  AcousticID.md  AcousticTMM.md  README.md
docs/Examples/: Hybrid.md  Indirect.md  Inverse.md  impedance_tube.md  layer_to_database.md  layers_from_database.md  multilayer_structure.md  (+1 more)
search/: search_index.json
tests/: __init__.py  test_paramfinder.py  test_tmm.py
(+20 files in other folders)
