[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acoustipy"]

[project]
name = "acoustipy"
version = "0.1.0"
authors = [
  { name="Jacob Peterson", email="jdpeterman72@gmail.com" },
]
description = "Tools for characterizing the acoustic performance of porous materials."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas",
    "scipy",
    "matplotlib",
    "numpy"
]
